# discord-bots

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
pino-bot/: Cargo.toml  README.md
pino-bot/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
