[package]
name = "pino-bot"
version = "0.1.0"
authors = ["Axel Montini <axel.montini@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
structopt = "0.3.21"
regex = "1.4"
once_cell = "1.5"
chrono = "0.4.19"
rand = "0.8"
utils = { path = "../utils" }

[dependencies.serenity]
version = "0.9.3"
default-features = false
features = ["client", "builder", "model", "rustls_backend", "gateway"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["macros", "time"]